# system-monitoring-dashboard

./: .gitignore  CMakeLists.txt  Dockerfile  HOW_TO_RUN.md  README.md  main.cpp
api/: routes.cpp  routes.h  status_server.cpp
collector/: cpu_linux.cpp  cpu_macos.cpp  disk_linux.cpp  loop.cpp  memory_linux.cpp  memory_macos.cpp  net_linux.cpp  proc_linux.cpp
docs/: API.md  METRICS.md  PRODUCT_BRIED.md  STORAGE.md
include/: config.h
include/collector/: cpu.h  disk.h  loop.h  memory.h  net.h  proc.h
include/metrics/: metric_key.h  time.h
include/store/: memory_store.h  system_info.h
packaging/systemd/: system-monitoring-dashboard.service
store/: memory_store.cpp  system_info.cpp
web/: app.js  dashboard.html  index.html  styles.css
